# sakura_llvm_opt

./: README.md
assignment1/: CMakeLists.txt
assignment1/passManager/: CMakeLists.txt  another_transform.cpp
assignment1/passManager/tests/: Makefile  m2r_nopt_benchmark.ll  nopt_benchmark.ll  trans_benchmark.ll
assignment1/src/: CMakeLists.txt  FunctionInfo.cpp  LocalOpts.cpp  pass.cpp  transform.cpp
assignment1/ssa/: CMakeLists.txt
assignment1/ssa/tests/: Makefile  m2r_nopt_benchmark.ll  nopt_benchmark.ll  ssa_benchmark.ll
assignment1/test/: Makefile  algebraic.c  constfold.c  foo.c  loop.c  m2r_nopt_algebraic.ll  m2r_nopt_benchmark.ll  m2r_nopt_constfold.ll  m2r_nopt_loop.ll  m2r_nopt_strength.ll  nopt_algebraic.ll  nopt_benchmark.ll  nopt_constfold.ll  nopt_loop.ll  nopt_strength.ll  strength.c  trans_benchmark.ll
assignment2/: CMakeLists.txt
assignment2/src/: CMakeLists.txt  analysis_flag.h  avail_expr.cpp  framework.h  liveness.cpp
assignment2/test/: Makefile  available-test-m2r.ll  liveness-test-m2r.ll  test1-m2r.bc  test1.c  test2-m2r.bc  test2.c  test3-m2r.bc  test3.c  test4-m2r.bc  test4.c  test5-m2r.bc  test5.c
assignment3/: CMakeLists.txt
assignment3/src/: CMakeLists.txt  loop_invariant_code_motion.cpp
assignment3/test/: Makefile  loop.c  m2r_nopt_loop.ll  nopt_loop.ll  trans_loop.ll
